--- a/cli/lra/config_lra_example.tmpl
+++ b/cli/lra/config_lra_example.tmpl
@@ -5,6 +5,9 @@ target:
   outdir: /work/bb1153/b382076/LRA
   tmpdir: /scratch/b/b382076
 
+# Logging level
+loglevel: INFO
+
 # all the variable listed here will be processed by the LRA creator
 catalog:
   ICON:
