--- a/cli/gribber/gribber_setup.tmpl
+++ b/cli/gribber/gribber_setup.tmpl
@@ -13,4 +13,4 @@ dir:
   # directory where the resulting json will be produced
   jsondir: '/work/bb1153/b382289/gribscan-json'
   # directory where the catalog is found
-  catalogdir: '../../config/levante/catalog'
+  configdir: '../../config/'
