lra generate catalog entry

--- a/cli/lra/lra_config.tmpl
+++ b/cli/lra/lra_config.tmpl
@@ -6,6 +6,7 @@ target:
   tmpdir: /scratch/b/b382076
 
 # Logging level
+configdir: '../../config/'
 loglevel: INFO
 
 # all the variable listed here will be processed by the LRA creator
