--- a/cli/lra/lra_config.tmpl
+++ b/cli/lra/lra_config.tmpl
@@ -11,23 +11,22 @@ loglevel: INFO
 
 # all the variable listed here will be processed by the LRA creator
 catalog:
-  ICON:
-    ngc2009:
-      atm_2d_ml_R02B09:
-        vars: ['pr', 'psl', 'rsds', 'rlut', 'rlus', 'tas', 'tauu', 'tauv']
+  IFS:
+    tco1279-orca025:
+      ICMGG_atm2d:
+        vars: ['ci', 'tprate', '2t', 'erate', 'mslhfl', 'msshfl', 'msnsrf', 'msntrf', 'mtntrf', 'nsss', 'ewss', 'msl', 'hcc', 'lcc', 'mcc']
+      ICMU_atm3d:
+        vars: ['t', 'u', 'v', 'q']
+    tco2559-ng5:
+      ICMGG_atm2d:
+        vars: ['ci', 'tprate', '2t', 'erate', 'mslhfl', 'msshfl', 'msnsrf', 'msntrf', 'mtntrf', 'nsss', 'ewss', 'msl', 'hcc', 'lcc', 'mcc']
+      ICMU_atm3d:
+        vars: ['t', 'u', 'v', 'q']
   FESOM:
     tco2559-ng5:
       original_2d:
-        vars: ['sst', 'sss']
-  IFS:
-    tco2559-ng5:
-      ICMGG_atm2d:
-        vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
-      ICMU_atm3d:
-        vars: ['u']
-    tco3999-ng5:
-      ICMGG_atm2d:
-        vars: ['2t']
-    tco1279-orca025:
-      ICMGG_atm2d:
-        vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
+        vars: ['sos', 'sst', 'zos', 'ci', 'sithick']
+  ICON:
+    ngc2009:
+      atm_2d_ml_R02B09:
+        vars: ['ci', 'tprate', '2t', 'mslhfl', 'msshfl', 'msnsrf', 'msntrf', 'mtntrf', 'msl']
