--- a/cli/gribber/gribber-submitter.tmpl
+++ b/cli/gribber/gribber-submitter.tmpl
@@ -5,24 +5,51 @@
 #SBATCH --error=<job_name>_%j.err
 #SBATCH --account=<account>
 #SBATCH --nodes=1
-#SBATCH --ntasks-per-node=8
+#SBATCH --ntasks-per-node=<ntasks_per_node>
 #SBATCH --time=08:00:00
 #SBATCH --mem=200G 
 set -e
 
-# find mamba/conda (to be refined)
-whereconda=$(which mamba | rev | cut -f 3-10 -d"/" | rev)
-source $whereconda/etc/profile.d/conda.sh
+# configure AQUA folder path
+export AQUA=<AQUA_PATH>
 
-# specify the number of workers
-workers = 8
+# get machine name
+machine=levante
 
-# activate conda environment
-conda activate aqua
+# if machine is levante use mamba/conda
+if [ $machine == "levante" ]; then
+    # find mamba/conda (to be refined)
+    whereconda=$(which mamba | rev | cut -f 3-10 -d"/" | rev)
+    source $whereconda/etc/profile.d/conda.sh
+
+    # activate conda environment
+    conda activate aqua
+fi 
+
+function load_environment_AQUA() {
+	# Load env modules on LUMI
+    module purge
+    module use LUMI/22.08
+    module load python-xarray/3.10.6-cpeCray-22.08
+}
+
+# if machine is lumi use modules
+if [ $machine == "lumi" ]; then
+    load_environment_AQUA
+
+    # get username
+    username=$USER
+    export PATH="/users/$username/mambaforge/aqua/bin:$PATH"
+fi
+
+# set workers to number of tasks
+workers=${SLURM_NTASKS}
 
 # run the Python script
 # -c to specify the configuration file
 # -n to specify the number of processors
 # -o to overwrite existing json file
 # -l to set the log level (default is WARNING)
-./cli_gribber.py --config gribber_setup.yaml -n ${workers}
+# -s to search for a generic GRIB filename (default is False)
+
+$AQUA/cli/gribber/cli_gribber.py --config $AQUA/cli/gribber/gribber_setup.yaml -n ${workers}
