--- a/cli/lra/lra_config.tmpl
+++ b/cli/lra/lra_config.tmpl
@@ -13,6 +13,7 @@ opa:
   use_opa: False
   opacheckpoint: True
   opastreamstep: 5
+  opastreambreak: None
   opadir: /scratch/b/b382076/one_pass
 
 # all the variable listed here will be processed by the LRA creator
