adding some temporary info

--- a/cli/lra/lra_config.tmpl
+++ b/cli/lra/lra_config.tmpl
@@ -13,8 +13,12 @@ opa:
   use_opa: False
   opacheckpoint: True
   opastreamstep: 5
-  opastreambreak: None
   opadir: /scratch/b/b382076/one_pass
+
+gsv: 
+  use_gsv: False
+  start: None
+  end: None
 
 # all the variable listed here will be processed by the LRA creator
 catalog:
