definitive as default if running in slurm

--- a/diagnostics/teleconnections/cli/teleconnections-submitter.tmpl
+++ b/diagnostics/teleconnections/cli/teleconnections-submitter.tmpl
@@ -47,4 +47,4 @@ fi
 # -d to run a definitive run (default is False)
 # -l to set the log level (default is WARNING)
 
-$AQUA/diagnostics/teleconnections/cli/cli_teleconnections.py --config $AQUA/diagnostics/teleconnections/cli/teleconnections_config.yaml 
+$AQUA/diagnostics/teleconnections/cli/cli_teleconnections.py --config $AQUA/diagnostics/teleconnections/cli/teleconnections_config.yaml -d
