--- a/diagnostics/teleconnections/cli/single_dataset/teleconnections-submitter.tmpl
+++ b/diagnostics/teleconnections/cli/single_dataset/teleconnections-submitter.tmpl
@@ -23,6 +23,7 @@ if [ $machine == "levante" ]; then
     source $whereconda/etc/profile.d/conda.sh
 
     # activate conda environment
+    # be aware that the loaded environment is hard-coded to the default environment name
     conda activate teleconnections
 fi 
 
@@ -48,4 +49,5 @@ fi
 # -d to run a definitive run (default is False)
 # -l to set the log level (default is WARNING)
 
-$AQUA/diagnostics/teleconnections/cli/cli_teleconnections.py --config $AQUA/diagnostics/teleconnections/cli/teleconnections_config.yaml -d
+$AQUA/diagnostics/teleconnections/cli/single_dataset/cli_teleconnections.py \
+--config $AQUA/diagnostics/teleconnections/cli/single_dataset/teleconnections_config.yaml -d
