--- a/diagnostics/teleconnections/cli/teleconnections-submitter.tmpl
+++ b/diagnostics/teleconnections/cli/teleconnections-submitter.tmpl
@@ -53,11 +53,11 @@ fi
 # Uncomment the script you want to run
 
 # -c to specify the configuration file (--config)
-# -d to run a definitive run (default is False)
+# -d to run a definitive run (default is False, but the flag is activated in the template)
 # -l to set the log level (default is WARNING)
 
-# $AQUA/diagnostics/teleconnections/cli/dataset_comparison/cli_teleconnections.py \
-# --config $AQUA/diagnostics/teleconnections/cli/dataset_comparison/teleconnections_config.yaml -d
+# $AQUA/diagnostics/teleconnections/cli/comparison_analysis/cli_teleconnections.py \
+# --config $AQUA/diagnostics/teleconnections/cli/comparison_analysis/teleconnections_config.yaml -d
 
-# $AQUA/diagnostics/teleconnections/cli/single_dataset/cli_teleconnections.py \
-# --config $AQUA/diagnostics/teleconnections/cli/single_dataset/teleconnections_config.yaml -d
+# $AQUA/diagnostics/teleconnections/cli/single_analysis/cli_teleconnections.py \
+# --config $AQUA/diagnostics/teleconnections/cli/single_analysis/teleconnections_config.yaml -d
