adding initial set of fixes

--- a/cli/lra/lra_config.tmpl
+++ b/cli/lra/lra_config.tmpl
@@ -4,6 +4,7 @@ target:
   frequency: monthly
   outdir: /work/bb1153/b382076/LRAv3
   tmpdir: /scratch/b/b382076
+  aggregation: 'M'
 
 configdir: '../../config/'
 loglevel: INFO
